# encoding: utf-8
#
# Editra Launch Plugin
# Author: Cody Precord
# License: wxWindows License
#

#-----------------------------------------------------------------------------#
Version 1.5:

+New filetype handlers can be added through the new xml interface
+Add support for Stata (patch from Jean Eid)

#-----------------------------------------------------------------------------#
Version 1.4:

+Fix handling for files that have spaces in their names.
+Add option to provide audible feedback for when errors are detected.

#-----------------------------------------------------------------------------#
Version 1.3

+Use context sensitive messages for signaling updates, fixes failure to upate
on gtk when a subdialog has the focus.

#-----------------------------------------------------------------------------#
Version 1.2

+Make sure config is initialized for new installs when accessing config dialog
from Plugin Manager.

#-----------------------------------------------------------------------------#
Version 1.1
Date: 03/28/2009

+Add support for links in pylint output (patch from Erik Tollerud)
+Api compatibility changes.

#-----------------------------------------------------------------------------#
Version 1.0
Date: 01/29/2009

+Add support for OCaml (patch from quode)
+Improved Haskell support (patch from quode)
+Add support for LaTex files.
+Right click on configure executables list will show an option to browse for
the executable.
+Add error link support to VBScript (patch from Gaël)
+Add support for Dos Batch scripts (patch from Gaël)

#-----------------------------------------------------------------------------#
Version 0.9
Date: 01/02/2009

+Add support for R
+Fix file type not being checked when window is first shown

#-----------------------------------------------------------------------------#
Version 0.8
Date: 12/11/2008

+Add run last executed program function and shortcut.
+Automatically save the buffer to be excuted if it is modified.